updated app.put endpoint

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment-code",
+  "name": "bed-assignment-code",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
